# Hackathon-II-Todo-Spec-Driven-Development

./: .gitignore  README.md
.agent/workflows/: run-app.md
Phase1-In-Memory Python Console App/: CLAUDE.md  README.md  pyproject.toml
Phase1-In-Memory Python Console App/.specify/memory/: constitution.md
Phase1-In-Memory Python Console App/src/: __init__.py
Phase1-In-Memory Python Console App/src/cli/: main.py
Phase1-In-Memory Python Console App/src/services/: task_service.py
Phase1-In-Memory Python Console App/tests/unit/: test_task.py
Phase1-In-Memory-Python-Console-App/: .gitignore  README.md
Phase1-In-Memory-Python-Console-App/tests/: conftest.py
Phase2-Full-Stack Web Application/: .gitignore  README.md
Phase2-Full-Stack Web Application/backend/: .dockerignore  README.md  requirements.txt  test_api.py
Phase2-Full-Stack-Web-Application/: CLAUDE.md  README.md
Phase2-Full-Stack-Web-Application/backend/: .env.example  Dockerfile
Phase2-Full-Stack-Web-Application/frontend/: package-lock.json  package.json
Phase3-AI-Powered Todo Chatbot/: .gitignore  README.md  tasks.md
Phase3-AI-Powered Todo Chatbot/mcp-server/: Dockerfile  server.py
Phase3-AI-Powered-Todo-Chatbot/: README.md  constitution.md  plan.md  spec.md
Phase3-AI-Powered-Todo-Chatbot/mcp-server/: .dockerignore
Phase4-Local Kubernetes Deployment/: README.md
Phase4-Local Kubernetes Deployment/kubernetes/: namespace.yaml  (+1 more)
Phase4-Local-Kubernetes-Deployment/: .gitignore  README.md
Phase5-Advanced Cloud Deployment/: .gitignore  README.md
Phase5-Advanced-Cloud-Deployment/: README.md
(+81 files in other folders)
